...
  static const String appVersion = '1.0.0+1';

  // ─── Auth ─────────────────────────────────────────────
  static const String loginGreeting = 'Halo Mahasiswa!';
  static const String loginSubtitleDetail =
      'Masuk dengan NPM kamu untuk melihat jadwal & info perkuliahan.';
  static const String loginButton = 'Masuk Akun';
  static const String loginNpmHint = 'NPM';
  static const String loginPasswordHint = 'Password';
  static const String loginNpmHelper = 'Gunakan NPM aktif kamu';
  static const String loginHelpdesk = 'Butuh bantuan? ';
  static const String loginHelpdeskLink = 'Helpdesk IT';
  static const String loginOfflineBanner =
...
  static const String homeStatusOngoing = 'Sedang Berlangsung';
  static const String homeStatusUpcoming = 'Segera';
  static const String homeStatusMendatang = 'Mendatang';
  static const String homeStatusSelesai = 'Selesai';
  static const String homeSksUnit = 'SKS';
  static const String homeClassUnit = 'Kelas';
  static const String homeSksSemester = 'SKS Semester Ini';
  static const String homeKuliahHariIni = 'Kuliah Hari Ini';

  // ─── Jadwal ───────────────────────────────────────────
  static const String jadwalStatusOngoing = 'SEDANG BERLANGSUNG';
  static const String jadwalNullFallback = '-';

  // ─── Profile ──────────────────────────────────────────
...
