...
            ),
          ),
          SizedBox(height: sp(context, AppDimens.space24)),

          // NPM Field
          AppTextField(
            key: const Key('npm_field'),
            controller: widget.npmController,
            label: AppStrings.loginNpmHint,
            icon: Icons.badge_outlined,
            keyboardType: TextInputType.number,
            onChanged: (v) => context.read<AuthBloc>().add(AuthNpmChanged(v)),
          ),
          SizedBox(height: sp(context, AppDimens.space16)),

          // Password Field
          AppTextField(
            key: const Key('password_field'),
            controller: widget.passwordController,
            label: AppStrings.loginPasswordHint,
            icon: Icons.lock_outline,
            obscureText: _obscurePassword,
            suffix: IconButton(
              icon: Icon(
...
